--- a/app/views/crawler_mailer/daily_report.text.erb
+++ b/app/views/crawler_mailer/daily_report.text.erb
@@ -4,7 +4,7 @@ Sites updated on <%= l Date.current, format: :long %>
 
 <% if @sites.any? %>
   <% @sites.each do |site| %>
-    * <%= site.name %>  (<%= site.url %>)  – <%= l site.updated_at, format: :short %>
+    * <%= site.url %>
   <% end %>
 <% else %>
   No updates today.
