use regex to find if the item added is a link or not

--- a/app/views/websites/new.html.erb
+++ b/app/views/websites/new.html.erb
@@ -80,7 +80,7 @@
                                 data: { turbo: false, 
                                         association_insertion_node: '#hyperlinks', 
                                         association_insertion_method: :append, 
-                                        action: "click->preview#renderWithHyperlink" } %>
+                                        action: "click->preview#render" } %>
                     </div>
                     <div>
                         <h4>Hyperlinks Preview</h4>
