change how the db is structured to handle project urls

--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Creat a new user</h1>
+<h1>Create a new user</h1>
 <%= form_with model: [:admin, @user], local: true do |f| %>
     <%= f.text_field :first_name, placeholder: 'First Name' %>
     <%= f.text_field :last_name, placeholder: 'Last Name' %>
