--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,4 +23,21 @@
       </ul>
     </div>
   </div>
+
+  <div class="container-fluid">
+    <% if policy(CrawlerConfig).edit? %>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <%= link_to "Admin Dashboard", admin_path, class: "nav-link" %>
+        </li>
+      </ul>
+    <% end %>
+    <% if policy(Website).index? %>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <%= link_to "Websites", websites_path, class: "nav-link" %>
+        </li>
+      </ul>
+    <% end %>
+  </div>
 </div>
