--- a/app/views/websites/new.html.erb
+++ b/app/views/websites/new.html.erb
@@ -1,3 +1,5 @@
+<%= link_to 'Back to Websites', websites_path, class: 'btn btn-secondary' %>
+
 <h1>Track a new website</h1>
 
 <div class="container">
@@ -20,28 +22,38 @@
                     <%= form.text_field :name, class: 'form-control' %>
                 </div>
                 <div class="form-group">
-                    <%= form.label :url %>
-                    <%= form.text_field :url, class: 'form-control' %>
-                </div>
-                <div class="form-group">
                     <%= form.label :country %>
                     <%= form.text_field :country, class: 'form-control' %>
-                </div>
-                <div class="form-group">
-                    <%= form.label :website_type %>
-                    <%= form.text_field :website_type, class: 'form-control' %>
                 </div>
                 <div class="form-group">
                     <%= form.label :size %>
                     <%= form.text_field :size, class: 'form-control' %>
                 </div>
                 <div class="form-group">
-                    <%= form.label :status %>
-                    <%= form.text_field :status, class: 'form-control' %>
+                    <%= form.label :member %>
+                    <%= form.check_box :member %>
                 </div>
                 <div class="form-group">
-                    <%= form.label :start_date %>
+                    <%= form.label "Date Started Tracking" %>
                     <%= form.date_select :start_date, class: 'form-control' %>
+                </div>
+
+                <h3>Websites</h3>
+                <div class="form-group">
+                    <%= form.label "Projects page url" %>
+                    <%= form.text_field :projectsPage, class: 'form-control' %>
+                </div>
+                <div class="form-group">
+                    <%= form.label "Jobs page url" %>
+                    <%= form.text_field :jobsPage, class: 'form-control' %>
+                </div>
+                <div class="form-group">
+                    <%= form.label "News page url" %>
+                    <%= form.text_field :newsPage, class: 'form-control' %>
+                </div>
+                <div class="form-group">
+                    <%= form.label "LinkedIn page url" %>
+                    <%= form.text_field :linkedinPage, class: 'form-control' %>
                 </div>
 
                 <h3>Key Actors</h3>
@@ -61,32 +73,10 @@
                                         action: "click->preview#renderAdd" } %>
                     </div>
                     <div>
-                        <h4>Key Actors Preview</h4>
                         <ul data-preview-target="list"></ul>
                     </div>
                 </div>
-
-                <h3>Hyperlinks</h3>
-                <div data-controller="preview">
-                    <div id="hyperlinks">
-                        <%= form.fields_for :hyperlinks do |link_form| %>
-                            <%= link_form.label :url, "Hyperlink" %>
-                            <%= link_form.text_field :url, data: { preview_target: "value", action: "input->preview#update" } %>
-                            <%= link_to_remove_association "Remove", link_form, class: "btn btn-danger", data: { turbo:false, action: "click->preview#renderRemove" } %>
-                        <% end %>
-                        <%= link_to_add_association 'Add Hyperlink', 
-                            form, :hyperlinks,
-                            class: "btn btn-primary",
-                                data: { turbo: false, 
-                                        association_insertion_node: '#hyperlinks', 
-                                        association_insertion_method: :append, 
-                                        action: "click->preview#renderAdd" } %>
-                    </div>
-                    <div>
-                        <h4>Hyperlinks Preview</h4>
-                        <ul data-preview-target="list"></ul>
-                    </div>
-                </div>
+                
 
                 <div class="form-group">
                     <%= form.submit 'Create Website', class: 'btn btn-primary' %>
@@ -95,5 +85,3 @@
         </div>
     </div>
 </div>
-
-<%= link_to 'Back to Websites', websites_path, class: 'btn btn-secondary' %>
