--- a/app/views/websites/new.html.erb
+++ b/app/views/websites/new.html.erb
@@ -77,11 +77,12 @@
                     </div>
                 </div>
                 
-
                 <div class="form-group">
                     <%= form.submit 'Create Website', class: 'btn btn-primary' %>
                 </div>
             <% end %>
+
+            <%= link_to 'Import Websites from CSV', import_form_websites_path, class: 'btn btn-secondary' %>
         </div>
     </div>
 </div>
