--- a/app/views/crawler_mailer/daily_report.text.erb
+++ b/app/views/crawler_mailer/daily_report.text.erb
@@ -2,10 +2,25 @@ Daily Crawling Report
 
 Sites updated on <%= l Date.current, format: :long %>
 
-<% if @sites.any? %>
-  <% @sites.each do |site| %>
-    * <%= site.url %>
-  <% end %>
+<% if @websites.any? %>
+<% @websites.each do |website| %>
+------------------------------------------------------------
+<%= website.name %>
+
+<% if website.projects_last_change && website.projects_last_change.to_date == Date.current %>
+Projects Page: <%= website.projectsPage %>
+<% end %>
+<% if website.jobs_last_change && website.jobs_last_change.to_date == Date.current %>
+Jobs Page: <%= website.jobsPage %>
+<% end %>
+<% if website.news_last_change && website.news_last_change.to_date == Date.current %>
+News Page: <%= website.newsPage %>
+<% end %>
+<% if website.linkedin_last_change && website.linkedin_last_change.to_date == Date.current %>
+LinkedIn Page: <%= website.linkedinPage %>
+<% end %>
+
+<% end %>
 <% else %>
-  No updates today.
+No updates today
 <% end %>
