--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,6 +25,9 @@
             <li class="nav-item">
               <%= link_to "Websites", websites_path, class: "nav-link" %>
             </li>
+            <li class="nav-item">
+              <%= link_to "Daily Report", crawler_mailer_daily_report_path, class: "nav-link" %>
+            </li>
           <% end %>
         <% else %>
           <li class="nav-item">
