--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,13 @@
 <div class="container">
   <h1>Crawler configurator</h1>
-  <p>Configure your crawler to track websites and gather data.</p>
+  <p>Configure your crawler to track projects and gather data.</p>
   <p>
     <strong>Note:</strong> This is a work in progress. All the pages are not yet implemented and the visuals are not final.
   </p>
   <% if user_signed_in? %>
     <p>Welcome back, <%= "#{current_user.first_name} #{current_user.last_name}" %>!</p>
     <p>Pages you have access to:</p>
-    <%= link_to 'Websites', websites_path, class: 'btn btn-primary' if policy(Website).index? %>
+    <%= link_to 'Projects', projects_path, class: 'btn btn-primary' if policy(Project).index? %>
     <%= link_to 'Admin control panel', admin_path, class: 'btn btn-primary' if policy(CrawlerConfig).edit? %>
   <% end %>
 </div>
