--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,16 +1,16 @@
-<%= link_to 'Back to Websites', websites_path, class: 'btn btn-secondary' %>
+<%= link_to 'Back to Projects', projects_path, class: 'btn btn-secondary' %>
 
-<h1>Track a new website</h1>
+<h1>Track a new project</h1>
 
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            <%= form_with(model: @website, local: true) do |form| %>
-                <% if @website.errors.any? %>
+            <%= form_with(model: @project, local: true) do |form| %>
+                <% if @project.errors.any? %>
                     <div id="error_explanation">
-                        <h2><%= pluralize(@website.errors.count, "error") %> prohibited this website from being saved:</h2>
+                        <h2><%= pluralize(@project.errors.count, "error") %> prohibited this project from being saved:</h2>
                         <ul>
-                            <% @website.errors.full_messages.each do |message| %>
+                            <% @project.errors.full_messages.each do |message| %>
                                 <li><%= message %></li>
                             <% end %>
                         </ul>
@@ -30,31 +30,35 @@
                     <%= form.text_field :size, class: 'form-control' %>
                 </div>
                 <div class="form-group">
-                    <%= form.label :member %>
-                    <%= form.check_box :member %>
+                    <%= form.label :is_member %>
+                    <%= form.check_box :is_member %>
                 </div>
                 <div class="form-group">
                     <%= form.label "Date Started Tracking" %>
-                    <%= form.date_select :start_date, class: 'form-control' %>
+                    <%= form.date_select :date_started_tracking, class: 'form-control' %>
                 </div>
 
-                <h3>Websites</h3>
-                <div class="form-group">
-                    <%= form.label "Projects page url" %>
-                    <%= form.text_field :projectsPage, class: 'form-control' %>
-                </div>
-                <div class="form-group">
-                    <%= form.label "Jobs page url" %>
-                    <%= form.text_field :jobsPage, class: 'form-control' %>
-                </div>
-                <div class="form-group">
-                    <%= form.label "News page url" %>
-                    <%= form.text_field :newsPage, class: 'form-control' %>
-                </div>
-                <div class="form-group">
-                    <%= form.label "LinkedIn page url" %>
-                    <%= form.text_field :linkedinPage, class: 'form-control' %>
-                </div>
+                <h3>Pages</h3>
+
+                <% Website.website_types.keys.each do |type| %>
+                    <% # find the matching nested site (built in #new/#edit above) %>
+                    <% site = @project.websites.detect { |w| w.website_type == type } %>
+                    <div class="form-group">
+                        <%= form.fields_for :websites, site do |wf| %>
+                            <%= wf.hidden_field :website_type, value: type %>
+                            <%= wf.label :url, "#{type.to_s.titleize} page URL" %>
+                            <%= wf.text_field :url, class: 'form-control' %>
+                            <%# optional: allow destroying an existing one %>
+                            <% if wf.object.persisted? %>
+                                <div class="form-check">
+                                    <%= wf.check_box :_destroy, class: 'form-check-input' %>
+                                    <%= wf.label   :_destroy, 'Remove this URL', class: 'form-check-label' %>
+                                </div>
+                            <% end %>
+                        <% end %>
+                    </div>
+                <% end %>
+
 
                 <h3>Key Actors</h3>
                 <div data-controller="preview">
@@ -78,11 +82,11 @@
                 </div>
                 
                 <div class="form-group">
-                    <%= form.submit 'Create Website', class: 'btn btn-primary' %>
+                    <%= form.submit 'Create Project', class: 'btn btn-primary' %>
                 </div>
             <% end %>
 
-            <%= link_to 'Import Websites from CSV', import_form_websites_path, class: 'btn btn-secondary' %>
+            <%= link_to 'Import Projects from CSV', import_form_projects_path, class: 'btn btn-secondary' %>
         </div>
     </div>
 </div>
