--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,9 +21,9 @@
               <%= link_to "Admin Dashboard", admin_path, class: "nav-link" %>
             </li>
           <% end %>
-          <% if policy(Website).index? %>
+          <% if policy(Project).index? %>
             <li class="nav-item">
-              <%= link_to "Websites", websites_path, class: "nav-link" %>
+              <%= link_to "Projects", projects_path, class: "nav-link" %>
             </li>
             <li class="nav-item">
               <%= link_to "Daily Report", crawler_mailer_daily_report_path, class: "nav-link" %>
